# cc-context

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  AGENTS.src.md  CHANGELOG.md  CLAUDE.md  CLAUDE.src.md  LICENSE  README.md  STYLEGUIDE.md  Taskfile.yml  go.mod  go.sum  great-docs.yml  ops.json  pyproject.toml
.claude/: capt-hook.toml  settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: packs.toml
.github/: secret_scanning.yml
.github/formula/: ccx.rb.tmpl
.github/macos/: entitlements.plist
.github/workflows/: autobump.yml  ci.yml  release.yml
anchor/: anchor.go  anchor_test.go  files_test.go  rewrite.go  rewrite_test.go
bench/: .gitignore  FINDINGS.md  HANDOFF.md  README.md  config.toml  pyproject.toml  run.sh
bench/analysis/: bench-redesign-proposal.md  flood-audit-report.md  mechanism-report.md  stageE-audit.md
bench/ccxbench/: __init__.py  __main__.py  arms.py  baseline_control.txt  behavior.py  config.py  cost.py  envelope.py  fixtures.py  goldgen.py  grade.py  graders.py  integrity.py  ladder.txt  ladder_cli.txt  ladder_mcp.txt  microbench.py  report.py  repos.py  runner.py  taskgen.py  tokens.py  trajectory.py  types.py
bench/tasks/: callees-Compute.json  callees-Double.json  callees-GeneratedTotal.json  callees-Greet.json  callees-Triple.json  callees-announce.json  callees-is_blank.json  callees-main.json  callees-slugify.json  callees-titlecase.json  callers-Add.json  callers-Compute.json  callers-Double.json  callers-Gen0.json  callers-Greet.json  callers-normalize.json  callers-salutation.json  callers-shout.json  click-diff-parser.json  click-enum-get-command-classes.json  click-intent-decorators.json  click-intent-parser.json  click-nav-command.json  click-nav-option.json  click-nav-split-opt.json  diff-click-help.json  diff-double.json  diff-greet-compute.json  diff-slugify.json  diff-tornado-response.json  diff-tornado-routing.json  edit-click-batch-partial.json  edit-click-short-help-limit.json  edit-double-triple.json  edit-slugify-underscore.json  edit-titlecase-blank.json  edit-tornado-httperror-default.json  edit-tornado-supported-methods.json  flood-t1-click-convert.json  flood-t2-click-to-info-dict.json  (+75 more)
bench/tasks/patches/: diff-click-help.patch  diff-tornado-response.patch  diff-tornado-routing.patch
bench/tests/: test_arms.py  test_behavior.py  test_config.py  test_floor.py  test_graders_subset.py  test_harness.py  test_integrity.py  test_microbench.py  test_report.py  test_runner.py  test_select.py  test_tokens.py  test_trajectory.py  test_types.py
bench/tests/data/: haiku_envelope.json  nonreg-bigo__ccx-mcp__sonnet__r0.json  trace-tornado-parse-body__baseline__sonnet__r0.json  trajectory_real.json  trajectory_stub.json
cc_context/: __init__.py  __main__.py  cli.py
cmd/ccx/: main.go
docs/scripts/: demo.sh
embed-core/: Cargo.toml
embed-core/.cargo/: config.toml
embed-core/wasm/: Cargo.toml
embed-core/wasm/src/: lib.rs
format-core/: Cargo.toml  TOON_DRIFT.md
format-core/core/: Cargo.toml
format-core/core/src/: classify.rs  decode.rs  encoders.rs  json.rs  jsonl.rs  lib.rs  toon.rs  tron.rs  value.rs
format-core/core/tests/: corpus.rs  fuzz.proptest-regressions  fuzz.rs
format-core/corpus/: README.md  TestClassify.json  TestConvert.json  TestConvertAutoRegressions.json  TestConvertExplicitFormatShapeErrors.json  TestConvertExplicitFormats.json  TestConvertRoundTrip.json  TestConvertUnknownFormat.json  TestEncodeAutoCandidateTolerance.json  TestEncodeAutoNeverExceedsCompactJSON.json  TestJSONLEncode.json  TestJSONLRoundTrip.json  TestProseEncode.json  TestProseErrors.json  TestTronDuplicateKeys.json  TestTronFingerprintCollisions.json  TestTronGoldens.json
format-core/wasm/: Cargo.toml  README.md
format-core/wasm/src/: lib.rs
format-core/wasm/tests/: corpus.rs
internal/anchor/: anchor.go  anchor_test.go  files.go  files_test.go  rewrite.go  rewrite_test.go
internal/astgrep/: argv_test.go  diff.go  diff_test.go  flatten_test.go  outline.go  outline_paths_test.go  outline_test.go  resolve.go  resolve_test.go  run.go  run_test.go  secrets_test.go
internal/backend/: astgrep.go  astgrep_test.go  backend.go  backend_test.go  globanchor.go  globanchor_test.go  pathcheck.go  pathcheck_test.go  semble.go  tilth.go  tilth_anchor_test.go  tilth_diffargv_test.go
internal/cache/: cache.go  cache_test.go  lock_unix.go  lock_windows.go
internal/cli/: anchor.go  anchor_canary_test.go  anchor_test.go  apply_selection.go  bench.go  bench_test.go  census.go  census_test.go  cli_test.go  code.go  deps.go  diff.go  edit.go  edit_test.go  errors.go  errors_test.go  exec.go  exec_test.go  expansion_hint_test.go  find.go  find_test.go  flag_hints_test.go  format.go  format_test.go  grep.go  hello.go  hello_test.go  hint.go  history.go  history_test.go  hunks.go  locate.go  (+36 more)
plugin/: .mcp.json
scripts/: build-chunk-grammars.sh  build-embed-wasm.sh  build-wasm.sh
tests/: test_cli.py
(+434 files in other folders)
