[project]
name = "ccxbench"
version = "0.1.0"
description = "Token-savings + trajectory-attribution benchmark for cc-context (ccx)."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111",
    "spawnllm>=0.5.2",
    "cc-transcript>=7,<8",
    "capt-hook>=4,<5",
]

[tool.setuptools.packages.find]
include = ["ccxbench*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
