[project]
name = "ccxbench"
version = "0.1.0"
description = "Token-savings + trajectory-attribution benchmark for cc-context (ccx)."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111",
    "spawnllm>=0.5.2",
    "cc-transcript>=8,<9",
    "capt-hook>=4,<5",
    "tiktoken>=0.13.0",
]

# TEMPORARY: unreleased cc-transcript v8 from the sibling checkout, plus capt-hook's
# cc-transcript-v8 migration worktree (released capt-hook 4.x pins cc-transcript<8) —
# drop both before release; the real capt-hook fix ships in its wave-2 release.
[tool.uv.sources]
cc-transcript = { path = "../../cc-transcript", editable = true }
capt-hook = { path = "../../captain-hook-cc-transcript-v8", editable = true }

[tool.setuptools.packages.find]
include = ["ccxbench*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
