[project]
name = "ccxbench"
version = "0.1.0"
description = "Token-savings + trajectory-attribution benchmark for cc-context (ccx)."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111",
    "spawnllm>=0.6.0",
    "cc-transcript>=11,<12",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# cc-transcript is a Rust package with macOS/Linux wheels only (no Windows), so
# scope lock resolution to the platforms it actually supports.
[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

[tool.setuptools.packages.find]
include = ["ccxbench*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
